fixed chat routing, now correctly links to chat page; removed homepage image, preparing for new stylized site; attempting to remove black background--styling seems stuck.

--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,18 @@
 /* This .css file is only for global styles. */
 
 * {
-  color: white;
-  background-color: black;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Verdana;
 }
 
 h1 {
   font-family: Impact;
-  color: white;
 }
 
 h2 {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: white;
+  font-family: Verdana;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
