--- a/src/components/Chat-Page.css
+++ b/src/components/Chat-Page.css
@@ -7,11 +7,6 @@
     border-bottom: 1px solid #fafafa;
   }
   
-  a {
-    text-decoration: none;
-    color: inherit;
-  }
-  
   .chat_details {
     flex: 1;
   }
