--- a/src/components/css/NavBar.css
+++ b/src/components/css/NavBar.css
@@ -1,5 +1,5 @@
 .navbar_container {
-    background-color: black;
+    /* background-color: black; */
     display: flex;
     flex-direction: column;
     flex: 1;
